vlib/v/checker/tests/struct_field_type_err.vv
struct Data {
mut:
	n    int
	b    bool
	f1   fn (voidptr)    @[required]
	f2   fn (...voidptr) @[required]
	data &Data
}

fn main() {
	mut data := Data{
		n:    true
		b:    0
		f1:   fn (v ...voidptr) {}
		f2:   fn (v voidptr) {}
		data: true
	}

	data.n = true
}
